# latent_control_adapters

./: .gitignore  README.md  cli.py  example_usage.py  generate_package.sh  pyproject.toml  requirements.txt  setup.py  test_pipeline.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
configs/: linux.yaml  macos.yaml  production.yaml  windows.yaml
controls/: demo_multi.json
data/: demo_style_bulleted.txt  demo_style_emoji.txt  demo_style_narrative.txt  demo_style_no_emoji.txt  harmful.csv  harmless.csv
latent_control/: __init__.py  adapter.py  analysis.py  cli.py  config.py  convert_to_gguf.py  core.py  core_temp.py  export.py  hardware.py  presets.py
prompts/: alpha_analysis.txt  harmful.txt
scripts/: test_platform.py
vectors/: safety_metadata.json
