[project]
name = "latent-control"
version = "1.0.0"
description = "Latent Control Adapters API for Language Models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jaxtyping",
    "transformers",
    "tqdm",
    "einops",
    "torch",
    "accelerate",
    "pyyaml",
    "click",
    "pandas",
]

[project.scripts]
latent-control = "latent_control.cli:cli"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["latent_control"]

[project.optional-dependencies]
gpu = ["bitsandbytes>=0.41.0,<1.0.0"]
export = [
    "safetensors>=0.4.0",
    "gguf>=0.1.0",
    "numpy>=1.24.0",
    "mistral_common"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
